# BCB731

./: .gitignore  README.md  Snakefile  _quarto.yml  pyproject.toml
data/: survival.arrow
notebooks/: 02-poore_pred.html  02-poore_pred.ipynb  featurization_reprex.ipynb  overfit.html  overfit.ipynb
src/: 00-preprocess.py
