[tool.poetry]
name = "bcb731"
version = "0.1.0"
description = ""
authors = ["Ryan Videgar-Laird <rvl-git@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
pandas = "^2.1.2"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
openpyxl = "^3.1.2"
snakemake = "^7.32.4"
pyarrow = "^14.0.0"
umap-learn = "^0.5.4"
lifelines = "^0.27.8"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.8"
ruff = "^0.1.4"
ipywidgets = "^8.1.1"
jupyterlab-spellchecker = "^0.8.4"
black = {extras = ["jupyter"], version = "^23.11.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"